insere sessão do instagram e move as paginas

--- a/cinema.html
+++ b/cinema.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
-	<link href="../css/style.css" type="text/css" rel="stylesheet" />
-	<link href="../css/libs.css" type="text/css" rel="stylesheet" />
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
+	<link href="css/libs.css" type="text/css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="cinema">
 
 	<section class="hero">
 
@@ -20,7 +20,7 @@
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
-						<img src="../img/logo.png" alt="Logo Boulevard Anjos">
+						<img src="img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
 						<li><a href="/pages/cinema.html">CINEMA</a></li>
@@ -42,45 +42,38 @@
 			</nav>
 		</div>
 
+		<div class="banner">
+			<a href="#" class="btn btn-play">
+				<i class="far fa-play"></i>
+				<p>TRAILER</p>
+			</a>
+			<a href="#" class="btn btn-outline">
+				<i class="far fa-align-left"></i> VER MAIS FILMES
+			</a>
+		</div>
+		<div class="card">
+			<div class="movie-card"></div>
+
+		</div>
+
 		<!-- FIM DO MENU -->
 
 	</section>
 
 	<section class="resume" id="resume">
-		
-		<p><b>TRABALHE CONOSCO</b></p>
-		<P>CADASTRE SEU CURRÍCULO</P>
-		<P>VAGAS DISPONÍVEIS</P>
-
-		<p><b>GERENTE DE RESTAURANTE</b></p>
-		<p>Mc Donald´s</p>
-		<p><b>Experiência:</b> Mínimo de 3 anos de experiência como atendente e 1 ano como gerente.</p>
-		<p><b>Faixa etária:</b> 25 a 35 anos <b>Sexo:</b> Maculino <b>Horário:</b> 15h às 23h</p>
-		<p><b>Falar com:</b> Vitor Noronha <b>Telefone:</b> (51)99258-2985</p>
-		<p><b>E-mail:</b> vitor.noronha@mcdonalds.com.br</p>
-
-		<p><b>ATENDENTE DE RESTAURANTE</b></p>
-		<P>Subway</P>
-		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como atendente.</p>
-		<p><b>Faixa etária:</b> A partir de 18 anos <b>Sexo:</b> Ambos <b>Horário:</b> 09h às 18h</p>
-		<p><b>Falar com:</b> Camila Campos <b>Telefone:</b> (51)99115-8890</p>
-		<p><b>E-mail:</b> camilacampos@subway.com</p>
-
-		<p><b>GERENTE DE LOJA</b></p>
-		<P>Colombo</P>
-		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como gerente em loja de eletrodomésticos e ensino superior
-			completo.</p>
-		<p><b>Faixa etária:</b> 25 a 40 anos <b>Sexo:</b> Ambos <b>Horário:</b> 09h às 18h</p>
-		<p><b>Falar com:</b> José Vidal <b>Telefone:</b> (51)98156-7765</p>
-		<p><b>E-mail:</b> vidaljose@colombo.com.br</p>
-
-		<p><b>VENDEDOR</b></p>
-		<p>Riachuelo</p>
-		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como vendedor.</p>
-		<p><b>Faixa etária:</b> A partir de 18 anos <b>Sexo:</b> Ambos <b>Horário:</b> 14h às 23h</p>
-		<p><b>Falar com:</b> Ian Medeiros <b>Telefone:</b> (51)97675-0923</p>
-		<p><b>E-mail:</b> ian.medeiros@riachuelo.com.br</p>
-
+		<p>
+			Quarto filme da franquia Os Vingadores, na 3ª Fase do Universo Cinematográfico da Marvel. Culminando a
+			jornada de 21 filmes interconectados, Vingadores: Ultimato mostra o fim da luta dos heróis contra Thanos,
+			o titã louco. Após utilizar a manopla do infinito, Thanos dizimou metade dos seres vivos do universo, agora,
+			ainda sofrendo com a perda dos Vingadores devem se recompor e criar um plano para derrotar o vilão e
+			desfazer todo o caos.
+		</p>
+		<p><b>Horários | Período:</b> 		02/05 a 08/05.</p>
+		<p><b>Sala 1 | 3D | Dublado |</b> 	13:00 - 16:45 - 20:30</p>
+		<p><b>Sala 2 | 3D | Dublado |</b> 	13:30 - 17:15 - 21:00</p>
+		<p><b>Sala 3 | Dublado |</b> 		10:30 - 14:15 - 18:00</p>
+		<p><b>Sala 5 | Dublado |</b> 		17:40 - 21:20</p>
+		<p><b>Sala 6 | Dublado |</b> 		16:00 - 19:45</p>
 	</section>
 
 	<section class="services">
@@ -221,11 +214,11 @@
 
 	<!-- FIM DO FOOTER -->
 
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
-	<script type="text/javascript" src="../js/slick.min.js"></script>
-	<script src="../js/materialize.min.js"></script>
-	<script src="../js/functions.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
+	<script src="js/materialize.min.js"></script>
+	<script src="js/functions.js"></script>
 </body>
 
 </html>
