--- a/serviços.html
+++ b/serviços.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
-	<link href="../css/style.css" type="text/css" rel="stylesheet" />
-	<link href="../css/libs.css" type="text/css" rel="stylesheet" />
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
+	<link href="css/libs.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
-						<img src="../img/logo.png" alt="Logo Boulevard Anjos">
+						<img src="img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
 						<li><a href="/pages/cinema.html">CINEMA</a></li>
@@ -47,26 +47,12 @@
 	</section>
 
 	<section class="resume" id="resume">
+		<p><b>UM ESPAÇO PARA SUA SAÚDE</b></p>
+		<P>Pensando no seu bem estar, o Gravataí Shopping Center conta com um espaço para suporte e atendimento de
+			problemas de saúde. O serviço funciona de segunda à sexta das 10h às 18h e sábados, domingos e feriados das
+			12h às 18h.</P>
+		<p><b>Local:</b>No corredor em frente à loja Polishop.</p>
 
-		<p>26/06/2019</p>
-
-		<b>DOMINGO DIVERTIDO: TEATRO</b>
-
-		<P>O espetáculo tem texto de Juliano Prado e Marcos Luporini, os criadores do projeto Galinha Pintadinha, que
-			conquistou filhos e pais de todo o Brasil, contabilizando mais de 01 milhão de DVDs oficiais vendidos, 2
-			discos de
-			diamante, mais de 600 milhões de visualizações no YouTube, além de contratos com grandes empresas de
-			produção artística, distribuição e licenciamento de produtos.
-		</P>
-		<p>A história dividida entre a vida de estrela e mãe de família, a Galinha Pintadinha tem uma crise e desaparece
-			deixando pais e crianças perplexos. A explicação, segundo a Baratinha, é que ela vai encerrar a carreira!
-			Verdade ou mentira? Dispostos a encontrar a Galinha Pintadinha e desfazer a confusão, a banda Naftalinas
-			embarca em uma divertida viagem pelas canções infantis que unem pais e filhos.
-		</p>
-		<p>No Shopping a peça será apresentada dia <b>05/07</b>, a partir das <b>15h</b> na praça de eventos.</p>
-
-		<p><b>Data:</b> 05/07/2019 <b>Horário:</b> 15h <b>Local:</b> Praça de eventos</p>
-		<p><b>Preço:</b> Evento gratuito</p>
 	</section>
 
 	<section class="services">
@@ -207,11 +193,11 @@
 
 	<!-- FIM DO FOOTER -->
 
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
-	<script type="text/javascript" src="../js/slick.min.js"></script>
-	<script src="../js/materialize.min.js"></script>
-	<script src="../js/functions.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
+	<script src="js/materialize.min.js"></script>
+	<script src="js/functions.js"></script>
 </body>
 
 </html>
