--- a/shopping.html
+++ b/shopping.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
-	<link href="../css/style.css" type="text/css" rel="stylesheet" />
-	<link href="../css/libs.css" type="text/css" rel="stylesheet" />
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
+	<link href="css/libs.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
-						<img src="../img/logo.png" alt="Logo Boulevard Anjos">
+						<img src="img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
 						<li><a href="/pages/cinema.html">CINEMA</a></li>
@@ -196,11 +196,11 @@
 
 	<!-- FIM DO FOOTER -->
 
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
-	<script type="text/javascript" src="../js/slick.min.js"></script>
-	<script src="../js/materialize.min.js"></script>
-	<script src="../js/functions.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
+	<script src="js/materialize.min.js"></script>
+	<script src="js/functions.js"></script>
 </body>
 
 </html>
