--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
-	<link href="../css/style.css" type="text/css" rel="stylesheet" />
-	<link href="../css/libs.css" type="text/css" rel="stylesheet" />
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
+	<link href="css/libs.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
-						<img src="../img/logo.png" alt="Logo Boulevard Anjos">
+						<img src="img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
 						<li><a href="/pages/cinema.html">CINEMA</a></li>
@@ -47,11 +47,39 @@
 	</section>
 
 	<section class="resume" id="resume">
-		<p><b>UM ESPAÇO PARA SUA SAÚDE</b></p>
-		<P>Pensando no seu bem estar, o Gravataí Shopping Center conta com um espaço para suporte e atendimento de
-			problemas de saúde. O serviço funciona de segunda à sexta das 10h às 18h e sábados, domingos e feriados das
-			12h às 18h.</P>
-		<p><b>Local:</b>No corredor em frente à loja Polishop.</p>
+		
+		<p><b>TRABALHE CONOSCO</b></p>
+		<P>CADASTRE SEU CURRÍCULO</P>
+		<P>VAGAS DISPONÍVEIS</P>
+
+		<p><b>GERENTE DE RESTAURANTE</b></p>
+		<p>Mc Donald´s</p>
+		<p><b>Experiência:</b> Mínimo de 3 anos de experiência como atendente e 1 ano como gerente.</p>
+		<p><b>Faixa etária:</b> 25 a 35 anos <b>Sexo:</b> Maculino <b>Horário:</b> 15h às 23h</p>
+		<p><b>Falar com:</b> Vitor Noronha <b>Telefone:</b> (51)99258-2985</p>
+		<p><b>E-mail:</b> vitor.noronha@mcdonalds.com.br</p>
+
+		<p><b>ATENDENTE DE RESTAURANTE</b></p>
+		<P>Subway</P>
+		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como atendente.</p>
+		<p><b>Faixa etária:</b> A partir de 18 anos <b>Sexo:</b> Ambos <b>Horário:</b> 09h às 18h</p>
+		<p><b>Falar com:</b> Camila Campos <b>Telefone:</b> (51)99115-8890</p>
+		<p><b>E-mail:</b> camilacampos@subway.com</p>
+
+		<p><b>GERENTE DE LOJA</b></p>
+		<P>Colombo</P>
+		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como gerente em loja de eletrodomésticos e ensino superior
+			completo.</p>
+		<p><b>Faixa etária:</b> 25 a 40 anos <b>Sexo:</b> Ambos <b>Horário:</b> 09h às 18h</p>
+		<p><b>Falar com:</b> José Vidal <b>Telefone:</b> (51)98156-7765</p>
+		<p><b>E-mail:</b> vidaljose@colombo.com.br</p>
+
+		<p><b>VENDEDOR</b></p>
+		<p>Riachuelo</p>
+		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como vendedor.</p>
+		<p><b>Faixa etária:</b> A partir de 18 anos <b>Sexo:</b> Ambos <b>Horário:</b> 14h às 23h</p>
+		<p><b>Falar com:</b> Ian Medeiros <b>Telefone:</b> (51)97675-0923</p>
+		<p><b>E-mail:</b> ian.medeiros@riachuelo.com.br</p>
 
 	</section>
 
@@ -193,11 +221,11 @@
 
 	<!-- FIM DO FOOTER -->
 
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
-	<script type="text/javascript" src="../js/slick.min.js"></script>
-	<script src="../js/materialize.min.js"></script>
-	<script src="../js/functions.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
+	<script src="js/materialize.min.js"></script>
+	<script src="js/functions.js"></script>
 </body>
 
 </html>
