--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
-	<link href="../css/style.css" type="text/css" rel="stylesheet" />
-	<link href="../css/libs.css" type="text/css" rel="stylesheet" />
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
+	<link href="css/libs.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
-						<img src="../img/logo.png" alt="Logo Boulevard Anjos">
+						<img src="img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
 						<li><a href="/pages/cinema.html">CINEMA</a></li>
@@ -53,13 +53,13 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img class="d-block w-100 bg-overlay" src="../img/shopping.jpg" alt="First slide">
+				<img class="d-block w-100 bg-overlay" src="img/shopping.jpg" alt="First slide">
 			  </div>
 			  <div class="carousel-item">
-				<img class="d-block w-100" src="../img/rua.jpg" alt="Second slide">
+				<img class="d-block w-100" src="img/rua.jpg" alt="Second slide">
 			  </div>
 			  <div class="carousel-item">
-				<img class="d-block w-100" src="../img/estacionamento.jpg" alt="Third slide">
+				<img class="d-block w-100" src="img/estacionamento.jpg" alt="Third slide">
 			  </div>
 			</div>
 			<a class="carousel-control-prev" href="#carousel-indicator" role="button" data-slide="prev">
@@ -82,27 +82,27 @@
 		
 		<div class="movies">
 			<div class="movie-card">
-				<img src="../img/shazam_capa.jpg" alt="Shazam" class="movie">
+				<img src="img/shazam_capa.jpg" alt="Shazam" class="movie">
 				<h5 class="movie-title">Shazam</h5>
 			</div>
 			<div class="movie-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="movie">
+				<img src="img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="movie">
 				<h5 class="movie-title">Capitã Marvel</h5>
 			</div>
 			<div class="movie-card">
-				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="movie">
+				<img src="img/dumbo_capa.jpg" alt="Dumbo" class="movie">
 				<h5 class="movie-title">Dumbo</h5>
 			</div>
 			<div class="movie-card">
-				<img src="../img/aladin_capa.jpg" alt="Aladin" class="movie">
+				<img src="img/aladin_capa.jpg" alt="Aladin" class="movie">
 				<h5 class="movie-title">Aladin</h5>
 			</div>
 			<div class="movie-card">
-				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="movie">
+				<img src="img/vingadores-capa.jpg" alt="Vingadores" class="movie">
 				<h5 class="movie-title">Vingadores</h5>
 			</div>
 			<div class="movie-card">
-				<img src="../img/sw_capa.jpg" alt="Star Wars" class="movie">
+				<img src="img/sw_capa.jpg" alt="Star Wars" class="movie">
 				<h5 class="movie-title">Star Wars</h5>
 			</div>
 		</div>
@@ -121,31 +121,31 @@
 		
 		<div class="food-stores">
 			<div class="store-card">
-				<img src="../img/burger_king.png" alt="burger king" class="store">
+				<img src="img/burger_king.png" alt="burger king" class="store">
 				<h5 class="store-title">BURGUER KING</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="store-card">
-				<img src="../img/cacau-show.jpg" alt="CACAU SHOW" class="store">
+				<img src="img/cacau-show.jpg" alt="CACAU SHOW" class="store">
 				<h5 class="store-title">CACAU SHOW</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="store-card">
-				<img src="../img/yakisoba.jpg" alt="Gendai" class="store">
+				<img src="img/yakisoba.jpg" alt="Gendai" class="store">
 				<h5 class="store-title">Gendai</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="store-card">
-				<img src="../img/spoleto.jpg" alt="SPOLETO" class="store">
+				<img src="img/spoleto.jpg" alt="SPOLETO" class="store">
 				<h5 class="store-title">SPOLETO</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="store-card">
-				<img src="../img/subway.jpg" alt="Subway" class="store">
+				<img src="img/subway.jpg" alt="Subway" class="store">
 				<h5 class="store-title">Subway</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
@@ -167,25 +167,25 @@
 		
 		<div class="news-container">
 			<div class="news-card">
-				<img src="../img/Novidade_1.png" alt="Shazam" class="news">
+				<img src="img/Novidade_1.png" alt="Shazam" class="news">
 				<h5 class="news-title">ESTACIONAMENTO GRATIS</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="news-card">
-				<img src="../img/Novidade_2.png" alt="Capitã Marvel" class="news">
+				<img src="img/Novidade_2.png" alt="Capitã Marvel" class="news">
 				<h5 class="news-title">PÁSCOA NO GRAVATAÍ</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="news-card">
-				<img src="../img/Novidade_3.png" alt="Dumbo" class="news">
+				<img src="img/Novidade_3.png" alt="Dumbo" class="news">
 				<h5 class="news-title">BIG BALL</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="news-card">
-				<img src="../img/Novidade_1.png" alt="Shazam" class="news">
+				<img src="img/Novidade_1.png" alt="Shazam" class="news">
 				<h5 class="news-title">ESTACIONAMENTO GRATIS</h5>
 				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
 					Officiis tenetur autem sequi vel deleniti nisi!</p>
@@ -211,26 +211,22 @@
 		</p>
 		
 		<div class="photos-container">
-			<div class="photo-card">
-				<img src="../img/shazam_capa.jpg" alt="Shazam" class="photo">
+			<div class="photo-card-1">
+				<!-- <img src="img/instagram_1.jpg" class="photo"> -->
 			</div>
-			<div class="photo-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="photo">
+			<div class="photo-card-2">
+				<!-- <img src="img/instagram_2.jpg" class="photo"> -->
 			</div>
-			<div class="photo-card">
-				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="photo">
+			<div class="photo-card-3">
+				<!-- <img src="img/instagram_3.jpg" class="photo"> -->
 			</div>
-			<div class="photo-card">
-				<img src="../img/aladin_capa.jpg" alt="Aladin" class="photo">
+			<div class="photo-card-4">
+				<!-- <img src="img/instagram_4.jpg" class="photo"> -->
 			</div>
-			<div class="photo-card">
-				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="photo">
-			</div>
-			<div class="photo-card">
-				<img src="../img/sw_capa.jpg" alt="Star Wars" class="photo">
+			<div class="photo-card-5">
+				<!-- <img src="img/instagram_5.jpg" class="photo"> -->
 			</div>
 		</div>
-
 	</section>
 
 	<!-- INICIO DO FOOTER -->
@@ -367,12 +363,12 @@
 
 	<!-- FIM DO FOOTER -->
 
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
-	<script type="text/javascript" src="../js/slick.min.js"></script>
-	<script src="../js/materialize.min.js"></script>
-	<script src="../js/bootstrap.bundle.min.js"></script>
-	<script src="../js/functions.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
+	<script src="js/materialize.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="js/functions.js"></script>
 </body>
 
 </html>
