--- a/lazer.html
+++ b/lazer.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
-	<link href="../css/style.css" type="text/css" rel="stylesheet" />
-	<link href="../css/libs.css" type="text/css" rel="stylesheet" />
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
+	<link href="css/libs.css" type="text/css" rel="stylesheet" />
 </head>
 
-<body class="cinema">
+<body>
 
 	<section class="hero">
 
@@ -20,7 +20,7 @@
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
-						<img src="../img/logo.png" alt="Logo Boulevard Anjos">
+						<img src="img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
 						<li><a href="/pages/cinema.html">CINEMA</a></li>
@@ -42,38 +42,31 @@
 			</nav>
 		</div>
 
-		<div class="banner">
-			<a href="#" class="btn btn-play">
-				<i class="far fa-play"></i>
-				<p>TRAILER</p>
-			</a>
-			<a href="#" class="btn btn-outline">
-				<i class="far fa-align-left"></i> VER MAIS FILMES
-			</a>
-		</div>
-		<div class="card">
-			<div class="movie-card"></div>
-
-		</div>
-
 		<!-- FIM DO MENU -->
 
 	</section>
 
 	<section class="resume" id="resume">
-		<p>
-			Quarto filme da franquia Os Vingadores, na 3ª Fase do Universo Cinematográfico da Marvel. Culminando a
-			jornada de 21 filmes interconectados, Vingadores: Ultimato mostra o fim da luta dos heróis contra Thanos,
-			o titã louco. Após utilizar a manopla do infinito, Thanos dizimou metade dos seres vivos do universo, agora,
-			ainda sofrendo com a perda dos Vingadores devem se recompor e criar um plano para derrotar o vilão e
-			desfazer todo o caos.
+
+		<p>26/06/2019</p>
+
+		<b>DOMINGO DIVERTIDO: TEATRO</b>
+
+		<P>O espetáculo tem texto de Juliano Prado e Marcos Luporini, os criadores do projeto Galinha Pintadinha, que
+			conquistou filhos e pais de todo o Brasil, contabilizando mais de 01 milhão de DVDs oficiais vendidos, 2
+			discos de
+			diamante, mais de 600 milhões de visualizações no YouTube, além de contratos com grandes empresas de
+			produção artística, distribuição e licenciamento de produtos.
+		</P>
+		<p>A história dividida entre a vida de estrela e mãe de família, a Galinha Pintadinha tem uma crise e desaparece
+			deixando pais e crianças perplexos. A explicação, segundo a Baratinha, é que ela vai encerrar a carreira!
+			Verdade ou mentira? Dispostos a encontrar a Galinha Pintadinha e desfazer a confusão, a banda Naftalinas
+			embarca em uma divertida viagem pelas canções infantis que unem pais e filhos.
 		</p>
-		<p><b>Horários | Período:</b> 		02/05 a 08/05.</p>
-		<p><b>Sala 1 | 3D | Dublado |</b> 	13:00 - 16:45 - 20:30</p>
-		<p><b>Sala 2 | 3D | Dublado |</b> 	13:30 - 17:15 - 21:00</p>
-		<p><b>Sala 3 | Dublado |</b> 		10:30 - 14:15 - 18:00</p>
-		<p><b>Sala 5 | Dublado |</b> 		17:40 - 21:20</p>
-		<p><b>Sala 6 | Dublado |</b> 		16:00 - 19:45</p>
+		<p>No Shopping a peça será apresentada dia <b>05/07</b>, a partir das <b>15h</b> na praça de eventos.</p>
+
+		<p><b>Data:</b> 05/07/2019 <b>Horário:</b> 15h <b>Local:</b> Praça de eventos</p>
+		<p><b>Preço:</b> Evento gratuito</p>
 	</section>
 
 	<section class="services">
@@ -214,11 +207,11 @@
 
 	<!-- FIM DO FOOTER -->
 
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
-	<script type="text/javascript" src="../js/slick.min.js"></script>
-	<script src="../js/materialize.min.js"></script>
-	<script src="../js/functions.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
+	<script src="js/materialize.min.js"></script>
+	<script src="js/functions.js"></script>
 </body>
 
 </html>
